# simpleshot

./: .gitignore  README.md  TODOS.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
docs/demo/: ATTRIBUTION.md
scripts/: resolve-signing-identity.sh  setup-dev-signing.sh  with-updater-signing.sh  write-latest-json.sh
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  Info.plist  entitlements.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: capture.rs  config.rs  history.rs  lib.rs  main.rs  tray.rs  updater.rs
src/components/: Toolbar.test.tsx  Toolbar.tsx
src/components/editor/: BrushCursor.tsx  TextInputOverlay.tsx
src/components/toolbar/: ActionButtons.tsx  BackgroundControls.tsx  ColorPickerGroup.tsx  HistoryButtons.tsx  SizeControl.test.tsx  SizeControl.tsx  StyleOptions.tsx  ToolSelector.tsx  Toolbar.tsx  icons.tsx  styles.ts
src/hooks/: useAnnotationLayer.ts  useCanvasPanZoom.ts  useCrop.ts  useEditorExport.ts  useEditorHistory.ts  useEyedropper.ts
src/lib/: AppChromeProvider.tsx  annotationFactory.test.ts  annotationFactory.ts  appearance.tsx  brushSize.test.ts  brushSize.ts  draw.ts  hotkeyFormat.test.ts  hotkeyFormat.ts  ipc.test.ts  ipc.ts  localization.tsx
src/types/: annotation.ts
src/windows/: Editor.tsx  Overlay.tsx  Settings.tsx
tools/signing-helper/: README.md
tools/signing-helper/PashattSigning/: Info.plist  PashattSigningApp.swift
tools/signing-helper/PashattSigning.xcodeproj/: project.pbxproj
tools/signing-helper/SimpleSHOTSigning/: Info.plist  SimpleSHOTSigningApp.swift
tools/signing-helper/SimpleSHOTSigning.xcodeproj/: project.pbxproj
